--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -6,7 +6,7 @@ USER root
 
 RUN apt-get update -y
 
-RUN apt-get install -y  python-pip python-dev build-essential
+RUN apt-get install -y  python3-pip python3-dev build-essential
 
 COPY . /home/app
 
@@ -15,8 +15,9 @@ USER app
 WORKDIR /home/app
 
 USER root
-RUN pip install -r requirements.txt
+
+RUN pip3 install -r requirements.txt
 
 RUN chown -R app:app /home/app/*
 
-CMD ["python","app.py"]
+CMD ["pytest"]
