--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 mock==2.0.0
+mongoengine==0.15.3
 more-itertools==4.3.0
 pathlib2==2.3.2
 pbr==4.2.0
@@ -28,6 +29,7 @@ pytest-cov==2.5.1
 pytest-flask==0.10.0
 pytest-mock==1.10.0
 pytest-pep8==1.0.6
+python-dateutil==2.7.3
 pytz==2018.5
 six==1.11.0
 typed-ast==1.1.0
